export const snapshot = {};

snapshot[`Build a markdown site 1`] = `7`;

snapshot[`Build a markdown site 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
  ],
}
`;

snapshot[`Build a markdown site 3`] = `
{
  content: "<h1>Normal page</h1>\\n<ul>\\n<li>List</li>\\n<li>Of</li>\\n<li>Elements</li>\\n</ul>\\n",
  data: {
    content: "\\n# Normal page\\n\\n- List\\n- Of\\n- Elements\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Basic page",
    url: "/basic/",
  },
  dest: {
    ext: ".html",
    path: "/basic/index",
  },
  src: {
    ext: ".md",
    path: "/basic",
  },
}
`;

snapshot[`Build a markdown site 4`] = `
{
  content: '<p><a href="#foo" target="_blank">link</a></p>\\n',
  data: {
    content: "[link](#foo){target=_blank}\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-attributes/",
  },
  dest: {
    ext: ".html",
    path: "/with-attributes/index",
  },
  src: {
    ext: ".md",
    path: "/with-attributes",
  },
}
`;

snapshot[`Build a markdown site 5`] = `
{
  content: '<pre><code class="language-html">&lt;p&gt;Example&lt;/p&gt;\\n</code></pre>\\n<pre><code>&lt;p&gt;Example without color highlight&lt;/p&gt;\\n</code></pre>\\n',
  data: {
    content: "\`\`\`html\\n<p>Example</p>\\n\`\`\`\\n\\n\`\`\`\\n<p>Example without color highlight</p>\\n\`\`\`\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-code/",
  },
  dest: {
    ext: ".html",
    path: "/with-code/index",
  },
  src: {
    ext: ".md",
    path: "/with-code",
  },
}
`;

snapshot[`Build a markdown site 6`] = `
{
  content: "<!-- deno-fmt-ignore-file -->\\n<dl>\\n<dt>This is a definition title</dt>\\n<dd>And this the description</dd>\\n<dd>Other description</dd>\\n<dt>Other title</dt>\\n<dd>And other description</dd>\\n</dl>\\n",
  data: {
    content: "<!-- deno-fmt-ignore-file -->\\nThis is a definition title\\n: And this the description\\n: Other description\\n\\nOther title\\n: And other description\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-deflist/",
  },
  dest: {
    ext: ".html",
    path: "/with-deflist/index",
  },
  src: {
    ext: ".md",
    path: "/with-deflist",
  },
}
`;

snapshot[`Build a markdown site 7`] = `
{
  content: '\\n<h1>Module <strong>example</strong></h1>\\n\\n<div><p>Welcome to this <a href="/">page</a></p></div>\\n',
  data: {
    content: "\\n<h1>{{ title | md(true) | safe }}</h1>\\n\\n<div>{{ description | md | safe }}</div>\\n",
    date: 1970-01-01T00:00:00.000Z,
    description: "Welcome to this [page](/)\\n",
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Module **example**",
    url: "/with-filter/",
  },
  dest: {
    ext: ".html",
    path: "/with-filter/index",
  },
  src: {
    ext: ".njk",
    path: "/with-filter",
  },
}
`;

snapshot[`Build a markdown site 8`] = `
{
  content: '<h1>Module example</h1>\\n<p><a href="/">Back to home</a></p>\\n',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    templateEngine: "tmpl.js,md",
    title: "Module example",
    url: "/with-module/",
  },
  dest: {
    ext: ".html",
    path: "/with-module/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/with-module",
  },
}
`;

snapshot[`Build a markdown site 9`] = `
{
  content: '<!-- deno-fmt-ignore-file -->\\n<h1></h1>\\n<p>Foo</p>\\n<ul>\\n<li>one: <a href="/items/un.html">un</a></li>\\n<li>two: <a href="/items/dous.html">dous</a></li>\\n<li>three: <a href="/items/tres.html">tres</a></li>\\n</ul>\\n',
  data: {
    content: "<!-- deno-fmt-ignore-file -->\\n# {{ title }}\\n\\nFoo\\n\\n{% for title, no in myData %}\\n- {{ title }}: [{{ no }}](/items/{{ no }}.html)\\n{%- endfor %}\\n",
    date: 1970-01-01T00:00:00.000Z,
    myData: {
      one: "un",
      three: "tres",
      two: "dous",
    },
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    templateEngine: "njk,md",
    url: "/with-nunjucks/",
  },
  dest: {
    ext: ".html",
    path: "/with-nunjucks/index",
  },
  src: {
    ext: ".md",
    path: "/with-nunjucks",
  },
}
`;
